--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 Revision history for the module "App::digitdemog" : 
 
 0.011  2023-0310 18:50+0900  Renovated from https://github.com/tulamili/download2gitrepo/blob/master/dl2git. "Download" is changed into "command output".
-0.011  2023-0310 19:08+0900  README is revised since it was not changed from of "dl2git".
+0.012  2023-0310 19:08+0900  README is revised since it was not changed from of "dl2git".
+0.013  2023-0310 19:19+0900  usage examples are added to the help manual.
